--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
             <div id="test"></div>
             <div id="test_composed"></div>
             <div id="box_test"></div>
+            <div id="chart-category"></div>
 
           <h2>Section title</h2>
           <div class="table-responsive">
