Updated formatting with larger data set
Good first cut at page 1

--- a/index.html
+++ b/index.html
@@ -131,14 +131,15 @@
           </div>
 
           <!-- <canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas> -->
-          <div class="row">
+<!--           <div class="row">
               <div id="chart"></div>
-          </div>
-            <div id="pie1" style="margin: 15px;"></div>
-            <div id="test"></div>
-            <div id="test_composed"></div>
-            <div id="box_test"></div>
+          </div> -->
+          <!-- <div class="row"> -->
+            <div id="composite_grades"></div>
             <div id="chart-category"></div>
+            <div id="levelPie"></div>
+
+          <!-- </div> -->
 
           <h2>Section title</h2>
           <div class="table-responsive">
