--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link href="https://getbootstrap.com/docs/4.1/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="dashboard.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/dc/2.1.9/dc.css"/>
+    <link href="dashboard.css" rel="stylesheet">
 
     <script type="text/javascript" src="https://rawgithub.com/NickQiZhu/dc.js/master/web/js/crossfilter.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.13.0/d3.js"></script>
@@ -117,7 +117,7 @@
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4" id"main">
           <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-            <h1 class="h2">Dashboard</h1>
+            <h1 class="h2">Grade Attainment</h1>
             <div class="btn-toolbar mb-2 mb-md-0">
               <div class="btn-group mr-2">
                 <button class="btn btn-sm btn-outline-secondary">Share</button>
@@ -130,20 +130,39 @@
             </div>
           </div>
 
+
+          <!-- <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom"> -->
           <!-- <canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas> -->
 <!--           <div class="row">
               <div id="chart"></div>
           </div> -->
-          <!-- <div class="row"> -->
-            <div id="composite_grades"></div>
+<!--           <div class="row">
+ -->            <div id="composite_grades"></div>
             <div id="chart-category"></div>
             <div id="levelPie"></div>
+            <!-- <div id="table_chart"> </div> -->
 
-          <!-- </div> -->
-
-          <h2>Section title</h2>
           <div class="table-responsive">
-            <table class="table table-striped table-sm">
+
+   <div id='table_chart' class="table table-striped table-sm">
+      <!-- create a custom header -->
+      <!-- <div class='header'> -->
+      <table id="header_of_table" class="table table-striped table-sm">
+        <thead>
+
+          <th>Name</th>
+          <th>Subject</th>
+          <th>Grade</th>
+        </thead>
+      </table>
+      <!-- data rows will filled in here -->
+   </div>    
+             </div>
+      <!-- </div> -->
+          <!-- <div class="row"> -->
+          <!-- <h2>Section title</h2> -->
+        <!-- </div> -->
+            <!-- <table class="table table-striped table-sm">
               <thead>
                 <tr>
                   <th>#</th>
@@ -267,14 +286,13 @@
                   <td>libero</td>
                 </tr>
               </tbody>
-            </table>
-          </div>
+            </table> -->
         </main>
       </div>
     </div>
 
     <!-- Bootstrap core JavaScript
-    ================================================== -->
+    ==================================================
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
